objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Is_existing_customer__c</fullName>
        <label>Is existing customer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Age_of_Dependents__c</fullName>
        <description>The user populates this text field to list the age of the dependents in the borrower’s household. By default, this field is blank.</description>
        <inlineHelpText>Enter the ages of the dependents in your household.</inlineHelpText>
        <label>Age of Dependents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Aliases__c</fullName>
        <description>The user populates this text field to record all of the borrower’s possible aliases. By default, this field is blank.</description>
        <inlineHelpText>Enter all of the borrower’s possible aliases in this field.</inlineHelpText>
        <label>Aliases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Income__c</fullName>
        <description>Users populate this optional currency field with the applicant&apos;s annual income. By default, it is blank.</description>
        <inlineHelpText>Enter the applicant&apos;s annual income.</inlineHelpText>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Country_of_Citizenship__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s country of citizenship.</description>
        <label>Country of Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Is.</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Country_of_Residence__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s country of residence.</description>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Is.</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Drivers_License__c</fullName>
        <description>This field is optional and manually updated. This field functionality is tied to and extended functionality of this field is used in credit reporting. This field should be filled in if you are using the Credit Reporting extensions.</description>
        <label>Drivers License</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Email_Type__c</fullName>
        <description>This field is optional. The user manually populates this field. It describes the customer&apos;s type of email.</description>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Employer_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the primary employer for the account holder.</description>
        <inlineHelpText>The name of the primary employer for the account holder.</inlineHelpText>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Employer_State__c</fullName>
        <description>This field is optional and manually updated. The state of the primary employer for the account holder.</description>
        <inlineHelpText>The state of the primary employer for the account holder.</inlineHelpText>
        <label>Employer State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Birth_Certificate__c</fullName>
        <description>This field is optional and manually updated. Civil Birth Certificate (required for applicants under 18 if passport is not provided) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Civil Birth Certificate (required for applicants under 18 if passport is not provided) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Birth Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Certifying_Acceptance_Date__c</fullName>
        <description>This field is optional and manually updated. The date of the financial institution&apos;s Certifying Acceptance Agent agreement with the IRS.</description>
        <inlineHelpText>The date of the financial institution&apos;s Certifying Acceptance Agent agreement with the IRS.</inlineHelpText>
        <label>Form W7 Certifying Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_City_State__c</fullName>
        <description>This field is optional and manually updated. The city and state where the institution that the account holder is attending or working at is located if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The city and state where the institution that the account holder is attending or working at is located if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College City State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_Duration__c</fullName>
        <description>This field is optional and manually updated. A description of how long the account holder will be attending the college or institution if the account holder is a non resident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>A description of how long the account holder will be attending the college or institution if the account holder is a non resident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the institution that the account holder is attending or working at if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The name of the institution that the account holder is attending or working at if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Delegate_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the person signing on behalf of the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The name of the person signing on behalf of the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 Delegate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Delegate_Relationship_Type__c</fullName>
        <description>This field is optional and manually updated. The type of relationship the delegate has with the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The type of relationship the delegate has with the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 Delegate Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Court-appointed Guardian</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Exception_1a_Partnership_EIN__c</fullName>
        <description>This field is optional and manually updated. The EIN (Employer Identification Number) of the partnership qualifying for &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h&apos; for applying for an ITIN.</description>
        <inlineHelpText>The EIN (Employer Identification Number) of the partnership qualifying for &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h&apos; for applying for an ITIN.</inlineHelpText>
        <label>Form W7 Exception 1a Partnership EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Foreign_DL_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually updated. Foreign Drivers License is being used to verify identity (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Drivers License is being used to verify identity (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Foreign DL Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Foreign_Voter_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. Foreign Voters Registration Card verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Voters Registration Card verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Foreign Voter ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Medical_Records_ID_Verifies__c</fullName>
        <description>This field is optional and manually updated. Medical Records (valid only for dependents under age 14 or under age 18 if a student) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Medical Records (valid only for dependents under age 14 or under age 18 if a student) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Medical Records ID Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_National_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. National Identification Card (must be current and contain name photograph address date of birth and expiration date) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>National Identification Card (must be current and contain name photograph address date of birth and expiration date) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 National ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Passport_Verifies__c</fullName>
        <description>This field is optional and manually updated. Indicates that the individual&apos;s passport (stand alone document) verifies foreign status identity or both (on IRS form W-7(COA)).</description>
        <inlineHelpText>Indicates that the individual&apos;s passport (stand alone document) verifies foreign status identity or both (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Passport Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
                <value>
                    <fullName>Identity and foreign status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_First_Name__c</fullName>
        <description>This field is optional and manually updated. The first name of account holder&apos;s previous name.</description>
        <inlineHelpText>The first name of account holder&apos;s previous name.</inlineHelpText>
        <label>Form W7 Previous First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_IRSN__c</fullName>
        <description>This field is optional and manually updated. The individual Holder&apos;s IRSN number if one has been previously issued used for purposes of the Form W-7 Application for Individual Taxpayer Identification Number (ITIN).</description>
        <inlineHelpText>The individual Holder&apos;s IRSN number if one has been previously issued used for purposes of the Form W-7 Application for Individual Taxpayer Identification Number (ITIN).</inlineHelpText>
        <label>Form W7 Previous IRSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_Name__c</fullName>
        <description>This field is optional and manually updated. The name under which the individual Holder&apos;s IRSN number if applicable was previously issued.</description>
        <inlineHelpText>The name under which the individual Holder&apos;s IRSN number if applicable was previously issued.</inlineHelpText>
        <label>Form W7 Previous Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Program_Office__c</fullName>
        <description>This field is optional and manually updated. The 8-digit office code that was issued to by the ITIN Program Office for the IRS Form W-7.</description>
        <inlineHelpText>The 8-digit office code that was issued to by the ITIN Program Office for the IRS Form W-7.</inlineHelpText>
        <label>Form W7 Program Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_School_Records_Verifies__c</fullName>
        <description>This field is optional and manually updated. School Records (valid only for dependents under age 14 or under age 18 if a student) verify either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>School Records (valid only for dependents under age 14 or under age 18 if a student) verify either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 School Records Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Treaty_Article_Number__c</fullName>
        <description>This field is optional and manually updated. The article number of the treaty under which the account holder receives benefits.</description>
        <inlineHelpText>The article number of the treaty under which the account holder receives benefits.</inlineHelpText>
        <label>Form W7 Treaty Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Treaty_Country__c</fullName>
        <description>This field is optional and manually updated. The country under whose treaty the account holder receives benefits.</description>
        <inlineHelpText>The country under whose treaty the account holder receives benefits.</inlineHelpText>
        <label>Form W7 Treaty Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Type_Other__c</fullName>
        <description>This field is optional and manually updated. A description of the other reason the application for US Individual Taxpayer Identification Number is being submitted.</description>
        <inlineHelpText>A description of the other reason the application for US Individual Taxpayer Identification Number is being submitted.</inlineHelpText>
        <label>Form W7 Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Type__c</fullName>
        <description>This field is optional and manually updated. Specifies the reason the account holder is submitting an application for an IRS Individual Taxpayer Identification Number.</description>
        <inlineHelpText>Specifies the reason the account holder is submitting an application for an IRS Individual Taxpayer Identification Number.</inlineHelpText>
        <label>Form W7 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nonresident Alien Tax Treaty</fullName>
                </value>
                <value>
                    <fullName>Nonresident Alien Filing Tax Return</fullName>
                </value>
                <value>
                    <fullName>Resident Alien Filing Tax Return</fullName>
                </value>
                <value>
                    <fullName>Citizen Dependent</fullName>
                </value>
                <value>
                    <fullName>Citizen Spouse</fullName>
                </value>
                <value>
                    <fullName>Nonresident Alien Student, Professor, or Researcher</fullName>
                </value>
                <value>
                    <fullName>Dependent or Spouse of Nonresident Alien</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_USCIS_Verifies__c</fullName>
        <description>This field is optional and manually updated. United States Citizenship and Immigration Services (USCIS) Photo Identification verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>United States Citizenship and Immigration Services (USCIS) Photo Identification verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 USCIS Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_US_Entry_Date__c</fullName>
        <description>This field is optional and manually updated. The date the account holder entered the United State.</description>
        <inlineHelpText>The date the account holder entered the United State.</inlineHelpText>
        <label>Form W7 US Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Former_Employer_EIN__c</fullName>
        <description>This field is optional and manually updated. The previous employer identification number of the account holder.</description>
        <inlineHelpText>The previous employer identification number of the account holder.</inlineHelpText>
        <label>Former Employer EIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Former_Employer_Name__c</fullName>
        <description>This field is optional and manually updated. The name under which the previous employer identification number for the account holder was issued.</description>
        <inlineHelpText>The name under which the previous employer identification number for the account holder was issued.</inlineHelpText>
        <label>Former Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gender__c</fullName>
        <description>This field is optional and manually updated. Specifies the gender type of the account holder.</description>
        <inlineHelpText>Specifies the gender type of the account holder.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Not Disclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Address_County__c</fullName>
        <description>Users populate this optional text field with the county name for the home address.</description>
        <label>Home Address County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Address__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Street address of the Contact&apos;s home address</description>
        <label>Home Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_City__c</fullName>
        <description>The user populates this optional field to specify the city of the contact’s home address. By default, this field is blank.</description>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Location__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Geolocation of the home address ( Latitude and Longitude)</description>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
</CustomObject>